
2015-04-28  Ron Norman
	* codegen.c now emits extern <function prototype> ();
	  for each subroutine called statically to avoid 
	  C compiler warnings

2015-04-27  Ron Norman

	* cobc.c codegen.c common.h typeck.c
	  updated to handle more options for support of Micro Focus
	  format files. New compile option -fmf-files sets all
	  sequential/relative files to be MF compatible
	  REWRITE is now allowed for LINE SEQUENTIAL files although
	  a status of 44 may happen if the new record will not
	  fit in the original record slot on disk.
	  New compile option -fibmcomp effectively sets:
	     binary-size: 2-4-8 & synchronized-clause: ok
	  And compile option -fno-ibmcomp effectively sets:
	     binary-size: 1--8 & synchronized-clause: ignore

2015-04-25  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* typeck.c (cb_emit_initialize): bug #84 check target for INITIALIZE,
	  almost fixed as suggested by Edward Hard

2015-04-14  Ron Norman

	* cobc.c codegen.c common.h tree.h parser.y typeck.c
	  updated to include support REPORT COLUMN LEFT/RIGHT/CENTER
	  Also REPORT: PLUS, STEP on OCCURS and multi COLUMN numbers

2015-04-14  Ron Norman <rjn@inglenet.com>

	* cobc.c, fileio.c, common.h updated to include support to a
	  Micro Focus style EXTFH interface. The allows for users to 
	  insert an external file handler while retaining all of the 
	  normal COBOL I/O functions.
	  To have the compiled program call 'yurfh' for I/O use:
	     cobc -fcallfh=yurfh
	  In turn 'yurfh' may call EXTFH for I/O functions
	  In codegen.c for RELATIVE files ACCESS SEQUENTIAL if no KEY is
	  defined then an internal one is created. This was required as 
	  parts of fileio.c expect there to be a key field for RELATIVE 
	  files to hold the record number being processed.

2015-04-12  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* config.c: load configuration file from COB_CONFIG_DIR if file cannot be